martin-mbtiles/tests/snapshots/mbtiles__databases@v2__flat.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: actual_value
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "D80BDADB720F2FAD831D3FB0F45408A6"  )',
    '(  "md-edit", "value - v2"  )',
    '(  "md-new", "value - new"  )',
    '(  "md-same", "value - same"  )',
]

[[]]
type = 'table'
tbl_name = 'tiles'
sql = '''
CREATE TABLE tiles (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  5, 0, 0, blob(same)  )',
    '(  5, 1, 1, blob(edit-v2)  )',
    '(  5, 3, 7, blob(new)  )',
    '(  5, 3, 8, blob(new)  )',
    '(  6, 0, 3, blob(same)  )',
    '(  6, 0, 5, blob(1-keep-1-rm)  )',
    '(  6, 1, 4, blob(edit-v2a)  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles'
