martin-mbtiles/tests/snapshots/mbtiles__databases@v2__hash.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: actual_value
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "5C90855D70120501451BDD08CA71341A"  )',
    '(  "md-edit", "value - v2"  )',
    '(  "md-new", "value - new"  )',
    '(  "md-same", "value - same"  )',
]

[[]]
type = 'table'
tbl_name = 'tiles_with_hash'
sql = '''
CREATE TABLE tiles_with_hash (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             tile_hash text,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  5, 0, 0, blob(same), "51037A4A37730F52C8732586D3AAA316"  )',
    '(  5, 1, 1, blob(edit-v2), "FF76830FF90D79BB335884F256031731"  )',
    '(  5, 3, 7, blob(new), "22AF645D1859CB5CA6DA0C484F1F37EA"  )',
    '(  5, 3, 8, blob(new), "22AF645D1859CB5CA6DA0C484F1F37EA"  )',
    '(  6, 0, 3, blob(same), "51037A4A37730F52C8732586D3AAA316"  )',
    '(  6, 0, 5, blob(1-keep-1-rm), "535A5575B48444EDEB926815AB26EC9B"  )',
    '(  6, 1, 4, blob(edit-v2a), "03132BFACDB00CC63D6B7DD98D974DD5"  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles_with_hash'

[[]]
type = 'view'
tbl_name = 'tiles'
sql = '''
CREATE VIEW tiles AS
             SELECT zoom_level, tile_column, tile_row, tile_data FROM tiles_with_hash'''
